components/monitoring/loki/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki-oauth
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: loki-oauth-tls
  labels:
    app: loki-oauth
spec:
  ports:
    - port: 3101
      protocol: TCP
      name: http-metrics
      targetPort: oauth-proxy
  selector:
    app: loki
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  ports:
    - port: 3100
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: loki
